# neodock

./: Cargo.toml  LICENSE  README.md  Taskfile.yml  rustfmt.toml
resources/: resources.gresource.xml
resources/css/: style.css
src/: application.rs  config.rs  constants.rs  init.rs  lib.rs  main.rs  prelude.rs  utils.rs  widgets.rs
src/models/: app.rs
src/services/: niri.rs
src/services/niri/: ipc.rs  socket.rs  window.rs  workspace.rs
src/utils/: gettext.rs  gresource.rs  log.rs  signal.rs  widget_ext.rs
src/widgets/: app_icon.rs  dock_view.rs  window.rs
