[package]
name = "neodock"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
declarative = "0.7.3"
futures = "0.3.31"
gettext-rs = { version = "0.7.7", features = ["gettext-system"] }
gtk4 = { version = "0.10.3", features = ["v4_20", "gio_v2_80"] }
gtk4-layer-shell = { version = "0.7.1", features = ["v1_3"] }
niri-ipc = "25.11.0"
serde_json = "1.0.149"
